# ESP32_MQTT_EXAMPLE_PROJECT

./: .gitignore  README.md
certificates/: README.md
firestore_structure/: README.md  firestore_structure.json
firmware/: CMakeLists.txt  README.md
firmware/esp32_wsl_example/: CMakeLists.txt
firmware/esp32_wsl_example/main/: CMakeLists.txt  main.c  wifi_config.h
firmware/esp32_wsl_example/main/station/: sdkconfig.ci
firmware/esp32_wsl_example/main/station/main/: Kconfig.projbuild  station_example_main.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c  wifi_config.h
flutter_app/: README.md
flutter_app/smart_home/: pubspec.yaml
flutter_app/smart_home/android/app/: build.gradle.kts  google-services.json
flutter_app/smart_home/android/app/src/main/java/com/example/smart_home/: MainActivity.java
flutter_app/smart_home/ios/Runner.xcworkspace/xcshareddata/: IDEWorkspaceChecks.plist:Zone.Identifier
flutter_app/smart_home/lib/: main.dart
flutter_app/smart_home/linux/: CMakeLists.txt
flutter_app/smart_home/linux/runner/: my_application.cc
flutter_app/smart_home/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/smart_home/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/smart_home/windows/runner/: Runner.rc  main.cpp
node_red_flows/: README.md  esp32_mqtt_firestore_flow.json  esp32_mqtt_firestore_flow.json:Zone.Identifier  flows.json
